tests/ui/generic-associated-types/gat-in-trait-path-undeclared-lifetime.stderr
error[E0261]: use of undeclared lifetime name `'x`
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:6:35
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |                                   ^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'x` lifetime
   |
LL |   fn _f(arg : Box<dyn for<'x, 'a> X<Y<'x> = &'a [u32]>>) {}
   |                           +++
help: consider introducing lifetime `'x` here
   |
LL |   fn _f<'x>(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |        ++++

error[E0582]: binding for associated type `Y` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/gat-in-trait-path-undeclared-lifetime.rs:6:33
   |
LL |   fn _f(arg : Box<dyn for<'a> X<Y<'x> = &'a [u32]>>) {}
   |                                 ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0261, E0582.
For more information about an error, try `rustc --explain E0261`.
